--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ getting-started/_release-notes.md
 getting-started/_saf-versions.md
 getting-started/_who-supports-saf.md
 other/_ideas-and-proposals-for-next-saf-versions.md
+test.txt
