--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ getting-started/_saf-versions.md
 getting-started/_who-supports-saf.md
 other/_ideas-and-proposals-for-next-saf-versions.md
 test.txt
+test2.txt
