--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-getting-started/_release-notes.md
-getting-started/_saf-versions.md
-getting-started/_who-supports-saf.md
-other/_ideas-and-proposals-for-next-saf-versions.md
-test.txt
-test2.txt
+_release-notes.md
+_saf-versions.md
+_who-supports-saf.md
+_ideas-and-proposals-for-next-saf-versions.md
